<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> MyNote </string>

    <string name="question"> Are you sure you want to delete this? </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>

    <string name="new1"> NEW </string>
    <string name="save">SAVE</string>
    <string name="close">CLOSE</string>
    <string name="edit"> EDIT </string>
    <string name="close_app"> CLOSE APP </string>
    <string name="notes"> MY NOTES </string>
    <string name="create">Create new note</string>
    <string name="success1">Saved successfully!</string>
    <string name="move1">Do you want to close without saving?</string>
    <string name="nodata1">No data</string>
    <string name="adaptive_banner_ad_unit_id" translatable="false">ca-app-pub-2784387996203928/8589132380</string>


</resources>