<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.myonote1.EditActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/baseGreen"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_collapseMode="pin" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cls"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector"
        android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
        android:text="@string/close"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sav"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/selector"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/cls"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:focusable="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <requestFocus/>

    <ImageView
        android:id="@+id/tombo_l"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolBar"
        app:srcCompat="@mipmap/ic_tombo_l_foreground" />

    <ImageView
        android:id="@+id/tombo_r"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolBar"
        app:srcCompat="@mipmap/ic_tombo_r_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>