<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.github.ASDFGQWERY.myonote1.ListActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/baseGreen"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_collapseMode="pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


    <Button
        android:id="@+id/closeapp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector"
        android:drawableStart="@drawable/ic_action_ext"
        android:text="@string/close_app"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/myToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/id_FrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="auto"
        app:backgroundTint="@color/FabOrange"
        app:layout_constraintBottom_toTopOf="@+id/id_FrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_add_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/notes"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myToolBar" />


    <TextView
        android:id="@+id/nodata1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:text="@string/nodata1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolBar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_FrameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>